adds basic imgui / opengl handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,5 +53,5 @@ project(${NAME} CXX)
 add_subdirectory(third-party)
 add_subdirectory(libraries)
 add_subdirectory(applications)
-#add_subdirectory(plugins)
+add_subdirectory(plugins)
 #add_subdirectory(configs)
