--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,4 +54,5 @@ add_subdirectory(third-party)
 add_subdirectory(libraries)
 add_subdirectory(applications)
 add_subdirectory(plugins)
+add_subdirectory(assets)
 #add_subdirectory(configs)
