--- a/applications/client/CMakeLists.txt
+++ b/applications/client/CMakeLists.txt
@@ -18,7 +18,7 @@ set_target_properties(
 target_link_libraries(
   pulcher-client
   PRIVATE
-    cxxopts pulcher-core pulcher-gfx
+    cxxopts pulcher-core pulcher-gfx pulcher-plugin
     #glfw OpenGL::OpenGL glad imgui
     #nlohmann_json::nlohmann_json
 )
