Issue #3 improves build script / install locations

--- a/plugins/ui/base/CMakeLists.txt
+++ b/plugins/ui/base/CMakeLists.txt
@@ -21,6 +21,9 @@ install(
   TARGETS ui-base
   LIBRARY NAMELINK_SKIP
   LIBRARY
-    DESTINATION lib/
+    DESTINATION bin/plugins/
+    COMPONENT plugin
+  RUNTIME
+    DESTINATION bin/plugins/
     COMPONENT plugin
 )
