Issue 3; files are now uploaded to launcher from server

--- a/applications/server/CMakeLists.txt
+++ b/applications/server/CMakeLists.txt
@@ -21,7 +21,7 @@ if (PULCHER_PLATFORM STREQUAL "Linux")
   target_link_libraries(
     pulcher-server
     PRIVATE
-      cxxopts pulcher-core pulcher-plugin pulcher-network
+      pulcher-network
   )
 
   install(
