adds spritesheet loading system
  - not terribly complex as player animation and map animation need to be
      implemented still

--- a/libraries/gfx/CMakeLists.txt
+++ b/libraries/gfx/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(
   pulcher-gfx
   PRIVATE
     src/pulcher-gfx/context.cpp
+    src/pulcher-gfx/spritesheet.cpp
 )
 
 set_target_properties(
