adds base for physics collision detection
  - uses querying / buffering system
  - allows for collision detection from both points and rays
  - will use SDFs w/ tiles as acceleration structure

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(core)
 add_subdirectory(gfx)
 add_subdirectory(network)
+add_subdirectory(physics)
 add_subdirectory(plugin)
 add_subdirectory(util)
