--- a/applications/client/CMakeLists.txt
+++ b/applications/client/CMakeLists.txt
@@ -19,6 +19,7 @@ target_link_libraries(
   pulcher-client
   PRIVATE
     cxxopts pulcher-core pulcher-gfx pulcher-plugin pulcher-network
+    pulcher-physics
 )
 
 install(
