cleans up dependencies to allow core to have physx
  - dependencies are moved around to allow core to include physx as dependency
      so that scene-bundle can have physx queries
  - other general cleanup

--- a/applications/client/CMakeLists.txt
+++ b/applications/client/CMakeLists.txt
@@ -19,7 +19,7 @@ target_link_libraries(
   pulcher-client
   PRIVATE
     cxxopts pulcher-core pulcher-gfx pulcher-plugin pulcher-network
-    pulcher-physics
+    pulcher-physics spdlog
 )
 
 install(
