--- a/libraries/physics/CMakeLists.txt
+++ b/libraries/physics/CMakeLists.txt
@@ -17,4 +17,4 @@ set_target_properties(
     POSITION_INDEPENDENT_CODE ON
 )
 
-target_link_libraries(pulcher-physics PUBLIC glm pulcher-core pulcher-util)
+target_link_libraries(pulcher-physics PUBLIC glm pulcher-util)
