adds pulcher-util as dependecy to server

--- a/applications/server/CMakeLists.txt
+++ b/applications/server/CMakeLists.txt
@@ -22,6 +22,7 @@ if (PULCHER_PLATFORM STREQUAL "Linux")
     pulcher-server
     PRIVATE
       pulcher-network
+      pulcher-util
   )
 
   install(
