replaces cxxopts with argparse
  - allows pulcher to run on seperate machines as cxxopts had abi issues

--- a/applications/launcher/CMakeLists.txt
+++ b/applications/launcher/CMakeLists.txt
@@ -16,7 +16,7 @@ set_target_properties(
 target_link_libraries(
   pulcher-launcher
   PRIVATE
-    cxxopts pulcher-network tiny-process-library
+    argparse pulcher-network tiny-process-library
 )
 
 install(
