allows clicked image tiles to show physx info

--- a/libraries/gfx/CMakeLists.txt
+++ b/libraries/gfx/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(
   PRIVATE
     src/pulcher-gfx/context.cpp
     src/pulcher-gfx/image.cpp
+    src/pulcher-gfx/imgui.cpp
     src/pulcher-gfx/spritesheet.cpp
 )
 
