improves installs w/ RPATH & static launcher
  - launcher now is static
  - .so files, including libstdc++ etc, will be installed & cmake RPATH set to
      locate them relative to executable/libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 cmake_policy(VERSION 3.0)
 
+# use rpath so we can install .so files locally to lib (such as libstdc++.so.6
+#   etc) to allow pulcher to be portable across various distros
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+set(CMAKE_INSTALL_RPATH "$ORIGIN/lib;$ORIGIN")
+
 if (PULCHER_PLATFORM STREQUAL "Win64")
   message("*-- compiling for Windows 64-bit platform")
   include(CMakeModules/win64.cmake)
