--- a/applications/launcher/CMakeLists.txt
+++ b/applications/launcher/CMakeLists.txt
@@ -13,6 +13,8 @@ set_target_properties(
       "-Wshadow -Wdouble-promotion -Wall -Wformat=2 -Wextra -Wpedantic -Wundef"
 )
 
+set(CMAKE_EXE_LINKER_FLAGS "-static -static-libstdc++ -static-libgcc")
+
 target_link_libraries(
   pulcher-launcher
   PRIVATE
