--- a/libraries/gfx/CMakeLists.txt
+++ b/libraries/gfx/CMakeLists.txt
@@ -24,5 +24,5 @@ target_link_libraries(
   PUBLIC
     glfw glad imgui sokol stb_image
   PRIVATE
-    pulcher-core glm
+    pulcher-core glm pulcher-util
 )
