scene bundle now uses pimpl for improve compiles

--- a/plugins/entity/CMakeLists.txt
+++ b/plugins/entity/CMakeLists.txt
@@ -5,6 +5,7 @@ target_link_libraries(
   plugin-entity
   PRIVATE
     EnTT cjson pulcher-core pulcher-gfx pulcher-physics pulcher-plugin
+    pulcher-controls pulcher-animation
 )
 
 set_target_properties(
