adds skeletal system to animations

--- a/libraries/util/CMakeLists.txt
+++ b/libraries/util/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(
   pulcher-util
   PRIVATE
     src/pulcher-util/any.cpp
+    src/pulcher-util/consts.cpp
     src/pulcher-util/enum.cpp
     src/pulcher-util/log.cpp
 )
