--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_subdirectory(entity)
 add_subdirectory(animation)
+add_subdirectory(audio)
+add_subdirectory(entity)
 add_subdirectory(map)
 add_subdirectory(physics)
 add_subdirectory(ui)
