--- a/plugins/entity/CMakeLists.txt
+++ b/plugins/entity/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries(
   plugin-entity
   PRIVATE
     EnTT cjson pulcher-core pulcher-gfx pulcher-physics pulcher-plugin
-    pulcher-controls pulcher-animation
+    pulcher-controls pulcher-animation pulcher-audio
 )
 
 set_target_properties(
