--- a/plugins/entity/CMakeLists.txt
+++ b/plugins/entity/CMakeLists.txt
@@ -4,6 +4,7 @@ target_include_directories(plugin-entity PUBLIC "include/")
 target_sources(
   plugin-entity
   PRIVATE
+    src/plugin-entity/cursor.cpp
     src/plugin-entity/source.cpp
     src/plugin-entity/player.cpp
     src/plugin-entity/weapon.cpp
