Adds general macOS support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ if (PULCHER_PLATFORM STREQUAL "Win64")
   include(CMakeModules/win64.cmake)
 elseif (PULCHER_PLATFORM STREQUAL "Linux")
   message("*-- compiling for Linux 64-bit platform")
+elseif (PULCHER_PLATFORM STREQUAL "macOS")
+  message("*-- compiling for macOS 64-bit platform")
 else()
   message("*-- defaulting to compile for Linux 64-bit platform")
   set(PULCHER_PLATFORM "Linux")
@@ -58,7 +60,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-if (PULCHER_PLATFORM STREQUAL "Linux")
+if (PULCHER_PLATFORM STREQUAL "Linux" OR PULCHER_PLATFORM STREQUAL "macOS")
   set(CMAKE_CXX_FLAGS "-march=x86-64")
 elseif (PULCHER_PLATFORM STREQUAL "Win64" OR PULCHER_PLATFORM STREQUAL "Win32")
   set(CMAKE_CXX_FLAGS "-march=x86-64 -gstabs")
