removes GCC specific flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if (PULCHER_PLATFORM STREQUAL "Linux" OR PULCHER_PLATFORM STREQUAL "macOS")
-  set(CMAKE_CXX_FLAGS "-march=x86-64 -fno-gnu-unique")
+  set(CMAKE_CXX_FLAGS "-march=x86-64")
 elseif (PULCHER_PLATFORM STREQUAL "Win64" OR PULCHER_PLATFORM STREQUAL "Win32")
   set(CMAKE_CXX_FLAGS "-march=x86-64 -gstabs")
 endif()
