reorganized how plugin functions work
  - now there is only a smaller set of plugin functions (load, update,
      shutdown, etc)
  - UiDispatch now called DebugUiDispatch
  - moved audio from plugin to audio library

--- a/applications/client/CMakeLists.txt
+++ b/applications/client/CMakeLists.txt
@@ -19,7 +19,7 @@ target_link_libraries(
   pulcher-client
   PRIVATE
     argparse pulcher-core pulcher-gfx pulcher-plugin
-    pulcher-physics pulcher-controls spdlog tiny-process-library
+    pulcher-physics pulcher-audio pulcher-controls spdlog tiny-process-library
 )
 
 install(
